Fix: correct head section formatting in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+
+  <title>Ares AI - UFC Fight Predictions</title>
+  <link rel="icon" type="image/jpeg" href="/images/logo.jpeg" />
+  </head>
 
 <body>
   <div id="root"></div>
